--- a/my/templates/solicitudCambioManager.html
+++ b/my/templates/solicitudCambioManager.html
@@ -244,7 +244,7 @@
 						"Incluir item" : function(){agregarItem() },
 						"Quitar item" : function() {quitar() },
 						"Enviar Solicitud" : function() {enviar()},
-						"Cancelar Solicitud" : function() { cancelar()}
+						"Descartar Solicitud" : function() { cancelar()}
 						
 					}
 				});
