Presentado Iteracion06 con los bugs corregidos.

--- a/my/templates/estadoFase.html
+++ b/my/templates/estadoFase.html
@@ -16,7 +16,7 @@
 
 							// datatype : "local",
 							// data:mydata,
-							url : 'http://localhost:5000/listarFases',
+							url : '/listarFases/',
 							datatype : "json",
 							mtype : "get",
 							postData:{idProyectoPD: retornaValorenSesion()},
