--- a/templates/solicitudCambioVotacion.html
+++ b/templates/solicitudCambioVotacion.html
@@ -289,7 +289,7 @@
 			return;
 		}
 		var rowdata = $('#listSC').getRowData(rowItem);
-		window.open('/informe?idSC='+rowdata.idSC,"Informe","titlebar=0")
+		window.open('/informe?idSC='+rowdata.idSC,'Informe',"location=0")
 			
 	}
 	function mostrarMensaje(titulo, mensaje) {
