--- a/templates/lineaBaseManager.html
+++ b/templates/lineaBaseManager.html
@@ -45,7 +45,7 @@
 								formatter : 'select',
 								stype : 'select',
 								editoptions : {
-									value : "todos:Todos;abierta:Abierta;cerrada:Cerrada"
+									value : "todos:Todos;abierta:Abierta;cerrada:Cerrada;inactiva:Inactiva"
 								},
 								hidden : false
 							}
