InformeSC integrado a la vista.

--- a/templates/proyectoManager.html
+++ b/templates/proyectoManager.html
@@ -2934,7 +2934,17 @@ var banderaRol;
 		}
 		return error;
 	}
-
+	function informeSC(){
+		
+		var rowItem = $('#list').jqGrid('getGridParam', 'selrow');
+		if (rowItem == null) {
+			//window.alert("Debe seleccionar un item");
+			mostrarMensaje("Atencion","Debe seleccionar un Proyecto");
+			return;
+		}
+		var rowdata = $('#list').getRowData(rowItem);
+		window.open('/informeSC?idProyecto='+rowdata.idProyecto,'Informe',"location=0")
+	}
 	function mostrarMensaje(titulo, mensaje) {
 		$('#msgbox').text(mensaje);
 		$('#msgbox').dialog({
@@ -3060,6 +3070,8 @@ var banderaRol;
 		value="Finalizar Proyecto" onclick='finalizarProyecto()' />
 		<input id="btActivarPy" type="button" name="btActivarPy"
 		value="Activar Proyecto" onclick='activarProyecto()' />
+		<input id="btInformeSC" type="button" name="informe"
+		value="Informe: Solicitudes de Cambio" onclick='informeSC()' />
 	<script>
 		$("#btFinalizarPy").button();
 		$("#btActivarPy").button();
@@ -3071,6 +3083,8 @@ var banderaRol;
 		$("#btFases").button();
 		$("#btRoles").button();
 		$("#btRolUser").button();
+		$("#btInformeSC").button();
+		$("#btFinalizarPy").button();
 	</script>
 </div>
 
