--- a/templates/lineaBaseManager.html
+++ b/templates/lineaBaseManager.html
@@ -191,7 +191,8 @@
 						srcformat : 'Y-m-d',
 						newformat : 'd/m/Y'
 					},
-					search : false
+					search : false,
+					hidden: true
 				}, {
 					name : 'fechaFinalizacion',
 					index : 'fechaFinalizacion',
@@ -203,7 +204,8 @@
 						srcformat : 'Y-m-d',
 						newformat : 'd/m/Y'
 					},
-					search : false
+					search : false,
+					hidden: true
 				},{
 					name : 'costo',
 					index : 'costo',
