--- a/templates/proyectoManager.html
+++ b/templates/proyectoManager.html
@@ -87,7 +87,8 @@ function() {
 						srcformat : 'Y-m-d',
 						newformat : 'd/m/Y'
 					},
-					search : false
+					search : false,
+					hidden: true
 				}, {
 					name : 'fechaFinalizacion',
 					index : 'fechaFinalizacion',
@@ -99,7 +100,8 @@ function() {
 						srcformat : 'Y-m-d',
 						newformat : 'd/m/Y'
 					},
-					search : false
+					search : false,
+					hidden: true
 				}, {
 					name : 'tipoItem_id',
 					index : 'tipoItem_id',
